getting user
