# src/docs/swagger.yaml
@@ -38,16 +38,16 @@ tags:
     externalDocs:
       description: Find out more about user at
       url: http://swagger.io
-  - name: Product
-    description: Everything about Product
-    externalDocs:
-      description: Find out more about Product of badjatya-store at
-      url: http://swagger.io
-  - name: Order
-    description: Everything about Order
-    externalDocs:
-      description: Find out more about the Order at
-      url: http://swagger.io
+  # - name: Product
+  #   description: Everything about Product
+  #   externalDocs:
+  #     description: Find out more about Product of badjatya-store at
+  #     url: http://swagger.io
+  # - name: Order
+  #   description: Everything about Order
+  #   externalDocs:
+  #     description: Find out more about the Order at
+  #     url: http://swagger.io
 
 components:
   securitySchemes:
@@ -2313,6 +2313,370 @@ paths:
       tags:
         - Manager
       summary: Manager can delete the user based on id but manager can not remove an admin or a manager
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+          default: 61b1d30fc943184620bc4e58
+          description: Enter id of the user whose role you want to update
+      responses:
+        200:
+          description: success, user removed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: User deleted successfully
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: bad request
+        401:
+          description: Unauthorized, Manager can not remove an admin or a manager
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: Manager can not remove an admin or a manager
+        404:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: User not found
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
+
+  # User Manager
+  /userManager/users:
+    get:
+      tags:
+        - User Manager
+      summary: userManager can get list of all users
+      responses:
+        200:
+          description: success, list of all users
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  result:
+                    type: string
+                    example: 2
+                  users:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        name:
+                          type: string
+                        email:
+                          type: string
+                        role:
+                          type: string
+                        isVerifiedUser:
+                          type: boolean
+                        accountCreatedUsing:
+                          type: string
+                        referId:
+                          type: string
+                        balance:
+                          type: number
+                        createdAt:
+                          type: string
+                          format: date
+                        updatedAt:
+                          type: string
+                          format: date
+                        __v:
+                          type: string
+        400:
+          description: Bad request, Token not found, please authenticate
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: Token not found, please authenticate
+        401:
+          description: Unauthorized, You are not allowed to use this
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: You are not allowed to use this
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
+
+  /userManager/users/{id}:
+    get:
+      tags:
+        - User Manager
+      summary: Manager can get detail of user based on id
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+          default: 61b1d30fc943184620bc4e58
+          description: Enter id of the user
+      responses:
+        200:
+          description: success, user details
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  user:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                      name:
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      isVerifiedUser:
+                        type: boolean
+                      accountCreatedUsing:
+                        type: string
+                      referId:
+                        type: string
+                      balance:
+                        type: number
+                      createdAt:
+                        type: string
+                        format: date
+                      updatedAt:
+                        type: string
+                        format: date
+                      __v:
+                        type: string
+        400:
+          description: Bad request, Token not found, please authenticate
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: Token not found, please authenticate
+        401:
+          description: Unauthorized, You are not allowed to use this
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: You are not allowed to use this
+        404:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: User not found
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
+    patch:
+      tags:
+        - User Manager
+      summary: User manager can update the user's details
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+          default: 61b1d30fc943184620bc4e58
+          description: Enter id of the user whose role you want to update
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Enter the name
+                  default: User
+                email:
+                  type: string
+                  format: email
+                  description: Enter the email
+                  default: user@dev.com
+      responses:
+        200:
+          description: success, user updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: User updated successfully
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: bad request
+        401:
+          description: Unauthorized, you are not allowed to use this resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: You are not allowed to use this resource
+        404:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: User not found
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
+    delete:
+      tags:
+        - User Manager
+      summary: Manager can delete the user based on id but only user
       parameters:
         - name: id
           required: true
