# src/routes/userManager.router.js
@@ -1,32 +1,26 @@
 const router = require("express").Router();
 
-// Admin Controller
+// userManager Controller
 const {
   getAllUsers,
-  getAllManagers,
   getSingleUser,
   updateSingleUser,
   deleteSingleUser,
-} = require("../controllers/manager.controller");
+} = require("../controllers/userManager.controller");
 
 // User middleware
 const { isLoggedIn, customRole } = require("../middlewares/user");
 
 // * Routes
 
-// Manager getting all users
-router.route("/users").get(isLoggedIn, customRole("manager"), getAllUsers);
+// userManager getting all users
+router.route("/users").get(isLoggedIn, customRole("userManager"), getAllUsers);
 
-// Manager getting all managers
-router
-  .route("/managers")
-  .get(isLoggedIn, customRole("manager"), getAllManagers);
-
-// Manager getting, updating and deleting single user
+// userManager getting, updating and deleting single user
 router
   .route("/users/:id")
-  .get(isLoggedIn, customRole("manager"), getSingleUser)
-  .patch(isLoggedIn, customRole("manager"), updateSingleUser)
-  .delete(isLoggedIn, customRole("manager"), deleteSingleUser);
+  .get(isLoggedIn, customRole("userManager"), getSingleUser)
+  .patch(isLoggedIn, customRole("userManager"), updateSingleUser)
+  .delete(isLoggedIn, customRole("userManager"), deleteSingleUser);
 
 module.exports = router;
